--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ Main components
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../img/bg-img.jpg") no-repeat center center;
+  background: url("../img/hersHisEdit8_19_19.jpg") no-repeat center center;
   background-size: cover;
   -webkit-filter: blur(4px);
   filter: blur(4px);
