--- a/css/main.css
+++ b/css/main.css
@@ -78,10 +78,20 @@ Main components
   overflow-y: auto;
 }
 
+#Bckgrnd {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    opacity: 0.2;
+}
+
+
 #cd-intro {
   position: relative;
   height: 100%;
-  background: url("../img/bg-img.jpg") no-repeat center center;
+  //background: url("../img/hersHisEdit8_19_19.jpg") no-repeat center center;
   background-size: cover;
 }
 #cd-intro h1 {
