--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ Main components
   overflow-y: auto;
 }
 
+/*
 #Bckgrnd {
     position: absolute;
     left: 0;
@@ -86,12 +87,15 @@ Main components
     height: auto;
     opacity: 0.2;
 }
+*/
 
 
 #cd-intro {
   position: relative;
   height: 100%;
-  //background: url("../img/hersHisEdit8_19_19.jpg") no-repeat center center;
+	background-color: rgba(238, 238, 238, 0.5);
+  background: url("../img/hersHisEdit8_19_19.jpg") no-repeat center center;
+	background-blend-mode: color;
   background-size: cover;
 }
 #cd-intro h1 {
